--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,3 +5,10 @@
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
 }
+
+body {
+    background-color: #101010;
+}
+
+/* font-family: 'Bebas Neue', sans-serif; */
+/* font-family: 'Questrial', sans-serif;*/
