--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,6 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
+  background-color: transparent;
 }
 
 #modal-background {
@@ -20,5 +22,4 @@
 
 #modal-content {
   position: absolute;
-  background-color:white;
 }
