--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -60,3 +60,65 @@
   border: none;
   background-color: black;
 }
+
+
+#profile-info {
+  background-color: white;
+  border-radius: 10px;
+  width: fit-content;
+  padding: 10px;
+
+}
+
+#users-username {
+  font-size: 20px;
+  color: grey;
+}
+
+#logout-button {
+  border: none;
+  background: none;
+  text-align: center;
+  font-size: 20px;
+  color: grey;
+}
+
+#logout-button:hover {
+  cursor: pointer;
+}
+
+#logout-button-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#login-signup-dropdown {
+  background-color: white;
+  border-radius: 10px;
+  width: fit-content;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+#login-signup-dropdown button{
+  border: none;
+  background: none;
+  padding: 5px;
+  align-items: center;
+}
+
+#login-signup-dropdown button:hover{
+  cursor: pointer;
+}
+
+#signup button {
+  background-color: red;
+  padding: 8px;
+  border-radius: 5px;
+  color: white;
+}
