pleas no hurt me

--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -20,6 +20,11 @@
     letter-spacing: 2px;
 }
 
+#login-errors {
+    color: white;
+    list-style: none;
+}
+
 #login-form-wrapper {
     display: flex;
     flex-direction: column;
