--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -23,6 +23,10 @@
     width: 100%;
 }
 
+#signup-errors {
+    color: white;
+    list-style: none;
+}
 
 #signup-form-wrapper label{
     width: 100%;
