--- a/react-app/src/components/shoppingCart/shoppingCart.css
+++ b/react-app/src/components/shoppingCart/shoppingCart.css
@@ -27,10 +27,14 @@
     border-radius: 5px;
     padding: 5px;
     color: white;
+    align-self: flex-end;
 }
 #checkout-button:hover {
     cursor: pointer;
+}
 
+#delete-cart-item {
+    margin-right: .3rem;
 }
 
 #delete-cart-item:hover{
@@ -46,13 +50,47 @@
     align-self: center;
     justify-content: center;
 }
+#cart-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
 
 #cart-wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
 #add-one-quantity:hover {
+    cursor: pointer;
+}
+
+#checkout-button-wrapper {
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    padding: .3rem;
+}
+
+
+#Cart-Wrapper-dropdown {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+#quantity-checker {
+    display: flex;
+    flex-direction: row;
+}
+
+#dropdown-close {
+    align-self: self-end;
+    padding: .2rem;
+}
+
+#dropdown-close:hover {
     cursor: pointer;
 }
