--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -67,7 +67,8 @@
   border-radius: 10px;
   width: fit-content;
   padding: 10px;
-
+  display: flex;
+  flex-direction: column;
 }
 
 #users-username {
@@ -76,11 +77,13 @@
 }
 
 #logout-button {
+  display: flex;
   border: none;
   background: none;
   text-align: center;
   font-size: 20px;
   color: grey;
+  align-self: center;
 }
 
 #logout-button:hover {
@@ -121,4 +124,8 @@
   padding: 8px;
   border-radius: 5px;
   color: white;
+}
+
+#logout-icon {
+  align-self: center;
 }
