--- a/react-app/src/components/reviewsPage/reviewsPage.css
+++ b/react-app/src/components/reviewsPage/reviewsPage.css
@@ -2,6 +2,9 @@
     padding-top: 86px;
 }
 
-p {
-    color: white;
+#review-header {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 50px;
+    letter-spacing: 2px;
+    color: bisque;
 }
