--- a/react-app/src/components/updateReview/updateReviewModal.css
+++ b/react-app/src/components/updateReview/updateReviewModal.css
@@ -1,24 +1,34 @@
-#review-Lord {
-    padding-top: 86px;
+#update-review-Lord {
+	display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    align-items: center;
+    border-radius: 15px;
+    width: 45rem;
+    height: 25rem;
+    border: 1px solid red;
+    box-shadow: 0 0 10px rgba(255, 255, 255, .3);
 }
 
-.stars {
+.stars-update {
 	display: flex;
-	flex-direction: row-reverse;
-	margin: 0.5rem 0 0 0;
+	justify-content: center;
+	align-items: flex-end;
+	flex-direction: column;
 }
 
 .star.filled {
-	background-color: rgb(107, 185, 240);
+	background-color: rgb(255,0,0);
 }
 
 .star:hover {
-	background-color: rgb(107, 185, 240);
+	background-color: rgb(255,0,0);
 	transition: 0.5s ease;
 }
 
 .star:hover~.star {
-	background-color: rgb(107, 185, 240);
+	background-color: rgb(255,0,0);
 }
 
 .star {
@@ -26,8 +36,23 @@
 	color: white;
 	font-size: 1rem;
 	transition: 0.5s ease;
-	background-color: rgb(220, 220, 223);
+	background-color: rgb(0, 0, 0);
 	padding: 0.3rem 0.5rem 0.3rem 0.5rem;
 	border-radius: 0.5rem;
 	cursor: pointer;
+}
+
+.stars-text-update {
+	color: white;
+}
+
+#just-stars {
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+#edit-review-header {
+	color: white;
+	font-family: 'Questrial', sans-serif;
+	padding: 1rem;
 }
