--- a/react-app/src/components/reviewsPage/reviewsPage.css
+++ b/react-app/src/components/reviewsPage/reviewsPage.css
@@ -32,16 +32,18 @@
 }
 
 #create-review-button {
-    background-color: transparent;
+    background-color: red;
     border: none;
     color: white;
     font-size: 1rem;
     transition: ease-in-out .5s;
+    padding: 3px;
+    border-radius: 5px;
 }
 
 #create-review-button:hover {
-    color: red;
     cursor: pointer;
+    letter-spacing: 1px;
 }
 
 #single-review {
